--- a/pages/10th.html
+++ b/pages/10th.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="stylesheet" href="../assets/css/animate.css">
     <link rel="icon" type="image/ico" href="../assets/files/favicon.ico" />    
-    <title>1er Lugar - Rusia 2018</title>
+    <title>10mo Lugar - Rusia 2018</title>
 </head>
 <body>
     <div class="container">
@@ -22,7 +22,7 @@
                 </div>
             <div class="pages">
                 <header>
-                    <h1 class="animated fadeInDown"># 1 - Benjamin Pavard <img src="../assets/files/flags/france.png" alt=""></h1>
+                    <h1 class="animated fadeInDown"># 10 - Ivan Perisic <img src="../assets/files/flags/croatia.png" alt=""></h1>
                 </header>
                 <section>
                     <div class="details">
@@ -31,7 +31,7 @@
                                 <h2 class="h2 animated fadeIn"><i class="fab fa-youtube"></i> Video</h2>
                                 <br>
                                 <iframe class="animated zoomIn" width="530" height="400"
-                                    src="https://www.youtube.com/embed/Ov39iGAgEn4">
+                                    src="https://www.youtube.com/embed/IPU2hI2UEmw">
                                 </iframe>
                             </div>
                         </div>
@@ -45,12 +45,12 @@
                                     <th class="th" id="left"><img src="../assets/files/flags/france.png" alt=""> Francia</th>
                                     <th class="th" id="left">4</th>
                                     <th class="th" >-</th>
-                                    <th class="th" id="right">3</th>
-                                    <th class="th" id="right">Argentina <img src="../assets/files/flags/argentina.png" alt=""></th>
+                                    <th class="th" id="right">2</th>
+                                    <th class="th" id="right">Croacia <img src="../assets/files/flags/croatia.png" alt=""></th>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td colspan="5" id="center">Octavos de Final</td>
+                                        <td colspan="5" id="center">Final</td>
 
                                     </tr>
                                     <tr>
@@ -65,45 +65,53 @@
                                         <th class="th" id="right">Jugador</th>
                                     </tr>
                                     <tr>
-                                        <td>Antoine Griezmann</td>
-                                        <td id="left">13' (P)</td>
+                                        <td>Mario Madzukic</td>
+                                        <td id="left">18' (GEC)</td>
                                         <td></td>
-                                        <td id="right">41'</td>
-                                        <td id="right">Ángel Di María</a></td>
+                                        <td id="sii">28'</td>
+                                        <td id="sii">Ivan Perisic</a></td>
                                     </tr>
                                     <tr>
-                                        <td id="si">Benjamin Pavard</td>
-                                        <td id="si">57'</td>
+                                        <td id="left">Antoine Griezmann</td>
+                                        <td id="left">38' (P)</td>
                                         <td></td>
-                                        <td id="right">48'</td>
-                                        <td id="right">Gabriel Mercado</a></td>
+                                        <td id="right">69'</td>
+                                        <td id="right">Mario Madzukic</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Paul Pogba</td>
+                                        <td id="left">59'</td>
+                                        <td></td>
+                                        <td id="right"></td>
+                                        <td id="right"></a></td>
                                     </tr>
                                     <tr>
                                         <td>Kylian Mbappé</td>
-                                        <td id="left">64' , 68' </td>
+                                        <td id="left">65'</td>
                                         <td></td>
-                                        <td id="right">90+3'</td>
-                                        <td id="right">Sergio Agüero</a></td>
+                                        <td id="right"></td>
+                                        <td id="right"></a></td>
                                     </tr>
                                 </tbody>
                             </table>
                             <div class="datos animated zoomIn">
                                 <dl>
-                                    
+                                    <p>Balón colgado al área que tras varios toques acaba empalmando Perisic con un gran zurdazo
+                                        pegado al palo que bate a Lloris.
+                                    </p>
                                     <ul id="si">Más Información</ul>
                                     <li type="circle">
-                                        Argentina es el primer equipo que marca menos de tres goles en un encuentro de la Copa del Mundo
-                                        para terminar perdiéndolo desde la URSS ante Bélgica de 1986 (3 - 4).
+                                        Francia ganó su segundo título mundialista, tras el que ganó en 1998.
                                     </li>
                                     <br>
                                     <li type="circle">
-                                        Francia está invicta en sus nueve partidos de un Mundial ante naciones sudamericanas 
-                                        (5 victorias, 4 empates), desde su derrota 1 - 2 contra Argentina en la edición de 1978.
+                                        Didier Deschamps es el tercero en ganar la Copa Mundial como jugador y entrenador, tras el 
+                                        brasileño Mario Zagallo y el alemán Franz Beckenbauer.
                                     </li>
                                     <br>
                                     <li type="circle">
-                                        Esta es la quinta vez que Argentina concede +4 goles en un encuentro de la Copa del Mundo y la 
-                                        primera desde su derrota por 0 - 4 frente a Alemania en cuartos de final de 2010.
+                                        Francias es el primer equipo en marcar cuatro goles en una final de la Copa del Mundo desde brasil
+                                        que ganó a Italia por 4 - 1 en 1970.
                                     </li>
                                 </dl>
                             </div>
