--- a/index.html
+++ b/index.html
@@ -150,14 +150,14 @@
                         </tr>
                         <tr>
                             <td class="td" id="center">10</td>
-                            <td><img src="./assets/files/flags/france.png" alt=""></td>
-                            <td>Kylian Mbappé</td>
-                            <td><img src="./assets/files/flags/argentina.png" alt=""> Argentina</td>
-                            <td id="center">...</td>
+                            <td><img src="./assets/files/flags/croatia.png" alt=""></td>
+                            <td>Ivan Perisic</td>
+                            <td><img src="./assets/files/flags/france.png" alt=""> Francia</td>
+                            <td id="center">Luzhniki Stadium, Moscú</td>
                             <td id="center"><i class="fas fa-futbol" id="si"></i>
                                 <i class="fas fa-futbol" id="si"></i>
                                 <i class="fas fa-futbol" id="si"></i>
-                                <i class="fas fa-futbol" id="si"></i>
+                                <i class="fas fa-futbol"></i>
                                 <i class="fas fa-futbol"></i></td>
                             <td id="center"><a href="./pages/10th.html" h>Ver Más..</a></td>
                         </tr>
