--- a/index.html
+++ b/index.html
@@ -144,29 +144,29 @@
                             <td id="center"><i class="fas fa-futbol" id="si"></i>
                                 <i class="fas fa-futbol" id="si"></i>
                                 <i class="fas fa-futbol" id="si"></i>
-                                <i class="fas fa-futbol"></i>
+                                <i class="fas fa-futbol" id="si"></i>
                                 <i class="fas fa-futbol"></i></td>
                             <td id="center"><a href="./pages/9th.html" h>Ver Más..</a></td>
                         </tr>
                         <tr>
                             <td class="td" id="center">10</td>
-                            <td><img src="./assets/files/flags/croatia.png" alt=""></td>
+                            <td><img src="./assets/files/flags/croatia.png" alt=""> <strong>4</strong></td>
                             <td>Ivan Perisic</td>
                             <td><img src="./assets/files/flags/france.png" alt=""> Francia</td>
                             <td id="center">Luzhniki Stadium, Moscú</td>
                             <td id="center"><i class="fas fa-futbol" id="si"></i>
                                 <i class="fas fa-futbol" id="si"></i>
                                 <i class="fas fa-futbol" id="si"></i>
-                                <i class="fas fa-futbol"></i>
+                                <i class="fas fa-futbol" id="si"></i>
                                 <i class="fas fa-futbol"></i></td>
                             <td id="center"><a href="./pages/10th.html" h>Ver Más..</a></td>
                         </tr>
                         <tr>
                             <td class="td" id="center">11</td>
-                            <td><img src="./assets/files/flags/france.png" alt=""><strong></strong></td>
-                            <td>Kylian Mbappé</td>
-                            <td><img src="./assets/files/flags/argentina.png" alt=""> Argentina</td>
-                            <td id="center">...</td>
+                            <td><img src="./assets/files/flags/belgium.png" alt=""> <strong>7</strong></td>
+                            <td>Kevin De Bruyne</td>
+                            <td><img src="./assets/files/flags/brazil.png" alt=""> Brasil</td>
+                            <td id="center">Kazan Arena, Kazán</td>
                             <td id="center"><i class="fas fa-futbol" id="si"></i>
                                 <i class="fas fa-futbol" id="si"></i>
                                 <i class="fas fa-futbol" id="si"></i>
@@ -176,10 +176,10 @@
                         </tr>
                         <tr>
                             <td class="td" id="center">12</td>
-                            <td><img src="./assets/files/flags/france.png" alt=""></td>
-                            <td>Kylian Mbappé</td>
+                            <td><img src="./assets/files/flags/croatia.png" alt=""> <strong>10</strong></td>
+                            <td>Luka Modric</td>
                             <td><img src="./assets/files/flags/argentina.png" alt=""> Argentina</td>
-                            <td id="center">...</td>
+                            <td id="center">Nizhni Novgorod Stadium, Nizhni Nóvgorod</td>
                             <td id="center"><i class="fas fa-futbol" id="si"></i>
                                 <i class="fas fa-futbol" id="si"></i>
                                 <i class="fas fa-futbol" id="si"></i>
@@ -189,40 +189,40 @@
                         </tr>
                         <tr>
                             <td class="td" id="center">13</td>
-                            <td><img src="./assets/files/flags/france.png" alt=""></td>
-                            <td>Kylian Mbappé</td>
-                            <td><img src="./assets/files/flags/argentina.png" alt=""> Argentina</td>
-                            <td id="center">...</td>
+                            <td><img src="./assets/files/flags/germany.png" alt=""> <strong>8</strong></td>
+                            <td>Tony Kroos</td>
+                            <td><img src="./assets/files/flags/sweden.png" alt=""> Suecia</td>
+                            <td id="center">Fisht Stadium, Sochi</td>
                             <td id="center"><i class="fas fa-futbol" id="si"></i>
                                 <i class="fas fa-futbol" id="si"></i>
                                 <i class="fas fa-futbol" id="si"></i>
-                                <i class="fas fa-futbol" id="si"></i>
+                                <i class="fas fa-futbol"></i>
                                 <i class="fas fa-futbol"></i></td>
                             <td id="center"><a href="./pages/13th.html" h>Ver Más..</a></td>
                         </tr>
                         <tr>
                             <td class="td" id="center">14</td>
-                            <td><img src="./assets/files/flags/france.png" alt=""></td>
-                            <td>Kylian Mbappé</td>
-                            <td><img src="./assets/files/flags/argentina.png" alt=""> Argentina</td>
-                            <td id="center">...</td>
+                            <td><img src="./assets/files/flags/belgium.png" alt=""> <strong>22</strong></td>
+                            <td>Nacer Chadli</td>
+                            <td><img src="./assets/files/flags/japan.png" alt=""> Japón</td>
+                            <td id="center">Rostov Arena, Rostov del Don</td>
                             <td id="center"><i class="fas fa-futbol" id="si"></i>
                                 <i class="fas fa-futbol" id="si"></i>
                                 <i class="fas fa-futbol" id="si"></i>
-                                <i class="fas fa-futbol" id="si"></i>
+                                <i class="fas fa-futbol"></i>
                                 <i class="fas fa-futbol"></i></td>
                             <td id="center"><a href="./pages/14th.html" h>Ver Más..</a></td>
                         </tr>
                         <tr>
                             <td class="td" id="center">15</td>
-                            <td><img src="./assets/files/flags/france.png" alt=""></td>
-                            <td>Kylian Mbappé</td>
-                            <td><img src="./assets/files/flags/argentina.png" alt=""> Argentina</td>
-                            <td id="center">...</td>
+                            <td><img src="./assets/files/flags/england.png" alt=""> <strong>7</strong></td>
+                            <td>Jesse Lingard</td>
+                            <td><img src="./assets/files/flags/panama.png" alt=""> Panamá</td>
+                            <td id="center">Nizhni Novgorod Stadium, Nizhni Nóvgorod</td>
                             <td id="center"><i class="fas fa-futbol" id="si"></i>
                                 <i class="fas fa-futbol" id="si"></i>
                                 <i class="fas fa-futbol" id="si"></i>
-                                <i class="fas fa-futbol" id="si"></i>
+                                <i class="fas fa-futbol"></i>
                                 <i class="fas fa-futbol"></i></td>
                             <td id="center"><a href="./pages/15th.html" h>Ver Más..</a></td>
                         </tr>
