--- a/pages/12th.html
+++ b/pages/12th.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="stylesheet" href="../assets/css/animate.css">
     <link rel="icon" type="image/ico" href="../assets/files/favicon.ico" />    
-    <title>1er Lugar - Rusia 2018</title>
+    <title>12vo Lugar - Rusia 2018</title>
 </head>
 <body>
     <div class="container">
@@ -22,7 +22,7 @@
                 </div>
             <div class="pages">
                 <header>
-                    <h1 class="animated fadeInDown"># 1 - Benjamin Pavard <img src="../assets/files/flags/france.png" alt=""></h1>
+                    <h1 class="animated fadeInDown"># 12 - Luka Modric <img src="../assets/files/flags/croatia.png" alt=""></h1>
                 </header>
                 <section>
                     <div class="details">
@@ -31,7 +31,7 @@
                                 <h2 class="h2 animated fadeIn"><i class="fab fa-youtube"></i> Video</h2>
                                 <br>
                                 <iframe class="animated zoomIn" width="530" height="400"
-                                    src="https://www.youtube.com/embed/Ov39iGAgEn4">
+                                    src="https://www.youtube.com/embed/h59FWlvfi5s">
                                 </iframe>
                             </div>
                         </div>
@@ -42,11 +42,11 @@
                             <br>
                             <table class="tabledetail animated zoomIn">
                                 <thead class="tit">
-                                    <th class="th" id="left"><img src="../assets/files/flags/france.png" alt=""> Francia</th>
-                                    <th class="th" id="left">4</th>
+                                    <th class="th" id="left"><img src="../assets/files/flags/argentina.png" alt=""> Argentina</th>
+                                    <th class="th" id="left">0</th>
                                     <th class="th" >-</th>
                                     <th class="th" id="right">3</th>
-                                    <th class="th" id="right">Argentina <img src="../assets/files/flags/argentina.png" alt=""></th>
+                                    <th class="th" id="right">Croacia <img src="../assets/files/flags/croatia.png" alt=""></th>
                                 </thead>
                                 <tbody>
                                     <tr>
@@ -65,45 +65,46 @@
                                         <th class="th" id="right">Jugador</th>
                                     </tr>
                                     <tr>
-                                        <td>Antoine Griezmann</td>
-                                        <td id="left">13' (P)</td>
                                         <td></td>
-                                        <td id="right">41'</td>
-                                        <td id="right">Ángel Di María</a></td>
+                                        <td id="left"></td>
+                                        <td></td>
+                                        <td id="right">53'</td>
+                                        <td id="right">Ante Rebic</a></td>
                                     </tr>
                                     <tr>
-                                        <td id="si">Benjamin Pavard</td>
-                                        <td id="si">57'</td>
+                                        <td id="si"></td>
+                                        <td id="si"></td>
                                         <td></td>
-                                        <td id="right">48'</td>
-                                        <td id="right">Gabriel Mercado</a></td>
+                                        <td id="sii">80'</td>
+                                        <td id="sii">Luka Modric</a></td>
                                     </tr>
                                     <tr>
-                                        <td>Kylian Mbappé</td>
-                                        <td id="left">64' , 68' </td>
                                         <td></td>
-                                        <td id="right">90+3'</td>
-                                        <td id="right">Sergio Agüero</a></td>
+                                        <td id="left"></td>
+                                        <td></td>
+                                        <td id="right">90+1'</td>
+                                        <td id="right">Ivan Rakitic</a></td>
                                     </tr>
                                 </tbody>
                             </table>
                             <div class="datos animated zoomIn">
                                 <dl>
-                                    
+                                    <p>Coge el balón en el balcón del área, amaga ante Otamendi y lo cuela pegado al palo izquierdo 
+                                        de Willy Caballero!</p>
                                     <ul id="si">Más Información</ul>
                                     <li type="circle">
-                                        Argentina es el primer equipo que marca menos de tres goles en un encuentro de la Copa del Mundo
-                                        para terminar perdiéndolo desde la URSS ante Bélgica de 1986 (3 - 4).
+                                            Esta es la primera victoria de Croacia contra un rival sudamericano en cinco 
+                                            encuentros disputados en la Copa del Mundo, habiendo perdido los cuatro anteriores.
                                     </li>
                                     <br>
                                     <li type="circle">
-                                        Francia está invicta en sus nueve partidos de un Mundial ante naciones sudamericanas 
-                                        (5 victorias, 4 empates), desde su derrota 1 - 2 contra Argentina en la edición de 1978.
+                                            Este 0 a 3 es la mayor de Argentina en la fase de grupos de un Mundial desde que perdiera 
+                                            1 a 6 contra Checoslovaquia en 1958.
                                     </li>
                                     <br>
                                     <li type="circle">
-                                        Esta es la quinta vez que Argentina concede +4 goles en un encuentro de la Copa del Mundo y la 
-                                        primera desde su derrota por 0 - 4 frente a Alemania en cuartos de final de 2010.
+                                            Argentina no ha logrado ganar ninguno de sus dos primeros partidos de la fase de 
+                                            grupos de una Copa del Mundo por primera vez desde 1974.
                                     </li>
                                 </dl>
                             </div>
