--- a/pages/13th.html
+++ b/pages/13th.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="stylesheet" href="../assets/css/animate.css">
     <link rel="icon" type="image/ico" href="../assets/files/favicon.ico" />    
-    <title>1er Lugar - Rusia 2018</title>
+    <title>13vo Lugar - Rusia 2018</title>
 </head>
 <body>
     <div class="container">
@@ -22,7 +22,7 @@
                 </div>
             <div class="pages">
                 <header>
-                    <h1 class="animated fadeInDown"># 1 - Benjamin Pavard <img src="../assets/files/flags/france.png" alt=""></h1>
+                    <h1 class="animated fadeInDown"># 1 - Toni Kroos <img src="../assets/files/flags/germany.png" alt=""></h1>
                 </header>
                 <section>
                     <div class="details">
@@ -31,7 +31,7 @@
                                 <h2 class="h2 animated fadeIn"><i class="fab fa-youtube"></i> Video</h2>
                                 <br>
                                 <iframe class="animated zoomIn" width="530" height="400"
-                                    src="https://www.youtube.com/embed/Ov39iGAgEn4">
+                                    src="https://www.youtube.com/embed/hDMuhgabjbo">
                                 </iframe>
                             </div>
                         </div>
@@ -42,15 +42,15 @@
                             <br>
                             <table class="tabledetail animated zoomIn">
                                 <thead class="tit">
-                                    <th class="th" id="left"><img src="../assets/files/flags/france.png" alt=""> Francia</th>
-                                    <th class="th" id="left">4</th>
+                                    <th class="th" id="left"><img src="../assets/files/flags/germany.png" alt=""> Alemania</th>
+                                    <th class="th" id="left">2</th>
                                     <th class="th" >-</th>
-                                    <th class="th" id="right">3</th>
-                                    <th class="th" id="right">Argentina <img src="../assets/files/flags/argentina.png" alt=""></th>
+                                    <th class="th" id="right">1</th>
+                                    <th class="th" id="right">Suecia <img src="../assets/files/flags/sweden.png" alt=""></th>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td colspan="5" id="center">Octavos de Final</td>
+                                        <td colspan="5" id="center">Fase de Grupos</td>
 
                                     </tr>
                                     <tr>
@@ -65,45 +65,39 @@
                                         <th class="th" id="right">Jugador</th>
                                     </tr>
                                     <tr>
-                                        <td>Antoine Griezmann</td>
-                                        <td id="left">13' (P)</td>
+                                        <td>Marco Reus</td>
+                                        <td id="left">48'</td>
                                         <td></td>
-                                        <td id="right">41'</td>
-                                        <td id="right">Ángel Di María</a></td>
+                                        <td id="right">32'</td>
+                                        <td id="right">Ola Toivonen</a></td>
                                     </tr>
                                     <tr>
-                                        <td id="si">Benjamin Pavard</td>
-                                        <td id="si">57'</td>
+                                        <td id="si">Toni Kroos</td>
+                                        <td id="si">90+5'</td>
                                         <td></td>
-                                        <td id="right">48'</td>
-                                        <td id="right">Gabriel Mercado</a></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Kylian Mbappé</td>
-                                        <td id="left">64' , 68' </td>
-                                        <td></td>
-                                        <td id="right">90+3'</td>
-                                        <td id="right">Sergio Agüero</a></td>
+                                        <td id="right"></td>
+                                        <td id="right"></a></td>
                                     </tr>
                                 </tbody>
                             </table>
                             <div class="datos animated zoomIn">
                                 <dl>
-                                    
+                                    <p>Kroos juega en corto con Reus, éste se la coloca y el del Real Madrid cuela el tanto al segundo palo.</p>
                                     <ul id="si">Más Información</ul>
                                     <li type="circle">
-                                        Argentina es el primer equipo que marca menos de tres goles en un encuentro de la Copa del Mundo
-                                        para terminar perdiéndolo desde la URSS ante Bélgica de 1986 (3 - 4).
+                                        Alemania ha remontado un partido que iba perdiendo al descanso en un Mundial por primera vez 
+                                        desde 1974, casualmente también contra Suecia (0 - 1 al descanso y 4 - 2 al final).
                                     </li>
                                     <br>
                                     <li type="circle">
-                                        Francia está invicta en sus nueve partidos de un Mundial ante naciones sudamericanas 
-                                        (5 victorias, 4 empates), desde su derrota 1 - 2 contra Argentina en la edición de 1978.
+                                        El gol de la victoria de Toni Kroos en el 94:42 ha sido el tanto más tardío en la 
+                                        historia de Alemania en los Mundiales (sin incluir prórroga).
                                     </li>
                                     <br>
                                     <li type="circle">
-                                        Esta es la quinta vez que Argentina concede +4 goles en un encuentro de la Copa del Mundo y la 
-                                        primera desde su derrota por 0 - 4 frente a Alemania en cuartos de final de 2010.
+                                        Ola Toivonen, de Suecia, no pudo anotar en 23 partidos de la Ligue 1 con 
+                                        el Toulouse en la 2017/18 después de 19 remates. Ha marcado en su segundo disparo 
+                                        en este Mundial.
                                     </li>
                                 </dl>
                             </div>
