--- a/pages/14th.html
+++ b/pages/14th.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="stylesheet" href="../assets/css/animate.css">
     <link rel="icon" type="image/ico" href="../assets/files/favicon.ico" />    
-    <title>1er Lugar - Rusia 2018</title>
+    <title>14vo Lugar - Rusia 2018</title>
 </head>
 <body>
     <div class="container">
@@ -22,7 +22,7 @@
                 </div>
             <div class="pages">
                 <header>
-                    <h1 class="animated fadeInDown"># 1 - Benjamin Pavard <img src="../assets/files/flags/france.png" alt=""></h1>
+                    <h1 class="animated fadeInDown"># 14 - Nacer Chadli <img src="../assets/files/flags/belgium.png" alt=""></h1>
                 </header>
                 <section>
                     <div class="details">
@@ -31,7 +31,7 @@
                                 <h2 class="h2 animated fadeIn"><i class="fab fa-youtube"></i> Video</h2>
                                 <br>
                                 <iframe class="animated zoomIn" width="530" height="400"
-                                    src="https://www.youtube.com/embed/Ov39iGAgEn4">
+                                    src="https://www.youtube.com/embed/6jVdO1Q5xPE">
                                 </iframe>
                             </div>
                         </div>
@@ -42,11 +42,11 @@
                             <br>
                             <table class="tabledetail animated zoomIn">
                                 <thead class="tit">
-                                    <th class="th" id="left"><img src="../assets/files/flags/france.png" alt=""> Francia</th>
-                                    <th class="th" id="left">4</th>
+                                    <th class="th" id="left"><img src="../assets/files/flags/belgium.png" alt=""> Bélgica</th>
+                                    <th class="th" id="left">3</th>
                                     <th class="th" >-</th>
-                                    <th class="th" id="right">3</th>
-                                    <th class="th" id="right">Argentina <img src="../assets/files/flags/argentina.png" alt=""></th>
+                                    <th class="th" id="right">2</th>
+                                    <th class="th" id="right">Japón <img src="../assets/files/flags/japan.png" alt=""></th>
                                 </thead>
                                 <tbody>
                                     <tr>
@@ -65,45 +65,48 @@
                                         <th class="th" id="right">Jugador</th>
                                     </tr>
                                     <tr>
-                                        <td>Antoine Griezmann</td>
-                                        <td id="left">13' (P)</td>
-                                        <td></td>
-                                        <td id="right">41'</td>
-                                        <td id="right">Ángel Di María</a></td>
-                                    </tr>
-                                    <tr>
-                                        <td id="si">Benjamin Pavard</td>
-                                        <td id="si">57'</td>
+                                        <td>Jan Vertonghen</td>
+                                        <td id="left">69'</td>
                                         <td></td>
                                         <td id="right">48'</td>
-                                        <td id="right">Gabriel Mercado</a></td>
+                                        <td id="right">Genki Haraguchi</a></td>
                                     </tr>
                                     <tr>
-                                        <td>Kylian Mbappé</td>
-                                        <td id="left">64' , 68' </td>
+                                        <td id="left">Marouane Fellaini</td>
+                                        <td id="left">74'</td>
                                         <td></td>
-                                        <td id="right">90+3'</td>
-                                        <td id="right">Sergio Agüero</a></td>
+                                        <td id="right">52'</td>
+                                        <td id="right">Takashi Inui</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td id="si">Nacer Chadli</td>
+                                        <td id="si">90+4' </td>
+                                        <td></td>
+                                        <td id="right"></td>
+                                        <td id="right"></a></td>
                                     </tr>
                                 </tbody>
                             </table>
                             <div class="datos animated zoomIn">
                                 <dl>
-                                    
+                                    <p>Córner a favor de Japón que se convierte en 
+                                        una contra mortal de Bélgica iniciada por Courtois. El pase de Meunier lo deja 
+                                        pasar a Lukaku, que arrastra a su par defensivo y permite a Chadli marcar a placer</p>
                                     <ul id="si">Más Información</ul>
                                     <li type="circle">
-                                        Argentina es el primer equipo que marca menos de tres goles en un encuentro de la Copa del Mundo
-                                        para terminar perdiéndolo desde la URSS ante Bélgica de 1986 (3 - 4).
+                                        Bélgica es la primera selección que remonta dos o más goles para ganar en una 
+                                        eliminatoria del Mundial en los 90 minutos reglamentarios desde el triunfo de 
+                                        Portugal ante Corea del Norte en los cuartos de final de 1966 (0 - 3, 5 - 3 final).
                                     </li>
                                     <br>
                                     <li type="circle">
-                                        Francia está invicta en sus nueve partidos de un Mundial ante naciones sudamericanas 
-                                        (5 victorias, 4 empates), desde su derrota 1 - 2 contra Argentina en la edición de 1978.
+                                        Bélgica ha alcanzado los cuartos de final de la Copa del Mundo en dos 
+                                        ediciones consecutivas por primera vez en su historia.
                                     </li>
                                     <br>
                                     <li type="circle">
-                                        Esta es la quinta vez que Argentina concede +4 goles en un encuentro de la Copa del Mundo y la 
-                                        primera desde su derrota por 0 - 4 frente a Alemania en cuartos de final de 2010.
+                                        Bélgica no ha dejado su portería a cero en ningún de sus 12 partidos 
+                                        en eliminatorias del Mundial, encajando un total de 28 goles.
                                     </li>
                                 </dl>
                             </div>
