--- a/pages/11th.html
+++ b/pages/11th.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="stylesheet" href="../assets/css/animate.css">
     <link rel="icon" type="image/ico" href="../assets/files/favicon.ico" />    
-    <title>1er Lugar - Rusia 2018</title>
+    <title>11vo Lugar - Rusia 2018</title>
 </head>
 <body>
     <div class="container">
@@ -22,7 +22,7 @@
                 </div>
             <div class="pages">
                 <header>
-                    <h1 class="animated fadeInDown"># 1 - Benjamin Pavard <img src="../assets/files/flags/france.png" alt=""></h1>
+                    <h1 class="animated fadeInDown"># 11 - Kevin De Bruyne <img src="../assets/files/flags/belgium.png" alt=""></h1>
                 </header>
                 <section>
                     <div class="details">
@@ -31,7 +31,7 @@
                                 <h2 class="h2 animated fadeIn"><i class="fab fa-youtube"></i> Video</h2>
                                 <br>
                                 <iframe class="animated zoomIn" width="530" height="400"
-                                    src="https://www.youtube.com/embed/Ov39iGAgEn4">
+                                    src="https://www.youtube.com/embed/rKn_Pncine4">
                                 </iframe>
                             </div>
                         </div>
@@ -42,15 +42,15 @@
                             <br>
                             <table class="tabledetail animated zoomIn">
                                 <thead class="tit">
-                                    <th class="th" id="left"><img src="../assets/files/flags/france.png" alt=""> Francia</th>
-                                    <th class="th" id="left">4</th>
+                                    <th class="th" id="left"><img src="../assets/files/flags/france.png" alt=""> Brasil</th>
+                                    <th class="th" id="left">1</th>
                                     <th class="th" >-</th>
-                                    <th class="th" id="right">3</th>
-                                    <th class="th" id="right">Argentina <img src="../assets/files/flags/argentina.png" alt=""></th>
+                                    <th class="th" id="right">2</th>
+                                    <th class="th" id="right">Bélgica <img src="../assets/files/flags/belgium.png" alt=""></th>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td colspan="5" id="center">Octavos de Final</td>
+                                        <td colspan="5" id="center">Cuartos de Final</td>
 
                                     </tr>
                                     <tr>
@@ -65,45 +65,41 @@
                                         <th class="th" id="right">Jugador</th>
                                     </tr>
                                     <tr>
-                                        <td>Antoine Griezmann</td>
-                                        <td id="left">13' (P)</td>
+                                        <td>Renato Augusto</td>
+                                        <td id="left">76'</td>
                                         <td></td>
-                                        <td id="right">41'</td>
-                                        <td id="right">Ángel Di María</a></td>
+                                        <td id="right">13' (GEC)</td>
+                                        <td id="right">Fernandinho</a></td>
                                     </tr>
                                     <tr>
-                                        <td id="si">Benjamin Pavard</td>
-                                        <td id="si">57'</td>
+                                        <td id="si"></td>
+                                        <td id="si"></td>
                                         <td></td>
-                                        <td id="right">48'</td>
-                                        <td id="right">Gabriel Mercado</a></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Kylian Mbappé</td>
-                                        <td id="left">64' , 68' </td>
-                                        <td></td>
-                                        <td id="right">90+3'</td>
-                                        <td id="right">Sergio Agüero</a></td>
+                                        <td id="sii">31'</td>
+                                        <td id="sii">Kevin De Bruyne</a></td>
                                     </tr>
                                 </tbody>
                             </table>
                             <div class="datos animated zoomIn">
                                 <dl>
-                                    
+                                    <p>Cabalgada de Romelu Lukaku por el medio que, a base de zancada, se deshacía 
+                                        de los brasileños que le salían a su paso. Llegó a la frontal y se lo dejó al jugador del City que, 
+                                        de un derechazo, cruzaba el esférico inapelable para Alisson. Primer tanto de Kevin de Bruyne en este 
+                                        Mundial, el segundo si contamos el que le anotó a Estados Unidos en los octavos de final de Brasil 2014</p>
                                     <ul id="si">Más Información</ul>
                                     <li type="circle">
-                                        Argentina es el primer equipo que marca menos de tres goles en un encuentro de la Copa del Mundo
-                                        para terminar perdiéndolo desde la URSS ante Bélgica de 1986 (3 - 4).
+                                        Bélgica ha alcanzado las semifinales de una Copa del Mundo por segunda vez en toda
+                                        su historia tras 1986, cuando cayó ante los posteriores campeones del mundo, Argentina.
                                     </li>
                                     <br>
                                     <li type="circle">
-                                        Francia está invicta en sus nueve partidos de un Mundial ante naciones sudamericanas 
-                                        (5 victorias, 4 empates), desde su derrota 1 - 2 contra Argentina en la edición de 1978.
+                                        Esta ha sido la segunda victoria de Bélgica ante Brasil en toda su historia (3 Derrotas)
+                                        y la primera desde 1963 en un amistoso en Bruselas.
                                     </li>
                                     <br>
                                     <li type="circle">
-                                        Esta es la quinta vez que Argentina concede +4 goles en un encuentro de la Copa del Mundo y la 
-                                        primera desde su derrota por 0 - 4 frente a Alemania en cuartos de final de 2010.
+                                        Brasil ha caido eliminada en sus últimas cuatro participaciones en la Copa del mundo y en 
+                                        las cuatro ante combinados europeos (Francia 2006, Holanda 2010, Alemania 2014 y Bélgica 2018).
                                     </li>
                                 </dl>
                             </div>
