--- a/pages/15th.html
+++ b/pages/15th.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="stylesheet" href="../assets/css/animate.css">
     <link rel="icon" type="image/ico" href="../assets/files/favicon.ico" />    
-    <title>1er Lugar - Rusia 2018</title>
+    <title>15vo Lugar - Rusia 2018</title>
 </head>
 <body>
     <div class="container">
@@ -22,7 +22,7 @@
                 </div>
             <div class="pages">
                 <header>
-                    <h1 class="animated fadeInDown"># 1 - Benjamin Pavard <img src="../assets/files/flags/france.png" alt=""></h1>
+                    <h1 class="animated fadeInDown"># 15 - Jesse Lingard <img src="../assets/files/flags/england.png" alt=""></h1>
                 </header>
                 <section>
                     <div class="details">
@@ -31,7 +31,7 @@
                                 <h2 class="h2 animated fadeIn"><i class="fab fa-youtube"></i> Video</h2>
                                 <br>
                                 <iframe class="animated zoomIn" width="530" height="400"
-                                    src="https://www.youtube.com/embed/Ov39iGAgEn4">
+                                    src="https://www.youtube.com/embed/MtvkicJjXsk">
                                 </iframe>
                             </div>
                         </div>
@@ -42,15 +42,15 @@
                             <br>
                             <table class="tabledetail animated zoomIn">
                                 <thead class="tit">
-                                    <th class="th" id="left"><img src="../assets/files/flags/france.png" alt=""> Francia</th>
-                                    <th class="th" id="left">4</th>
+                                    <th class="th" id="left"><img src="../assets/files/flags/england.png" alt=""> Inglaterra</th>
+                                    <th class="th" id="left">6</th>
                                     <th class="th" >-</th>
-                                    <th class="th" id="right">3</th>
-                                    <th class="th" id="right">Argentina <img src="../assets/files/flags/argentina.png" alt=""></th>
+                                    <th class="th" id="right">1</th>
+                                    <th class="th" id="right">Panamá <img src="../assets/files/flags/panama.png" alt=""></th>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td colspan="5" id="center">Octavos de Final</td>
+                                        <td colspan="5" id="center">Fase de Grupos</td>
 
                                     </tr>
                                     <tr>
@@ -65,45 +65,46 @@
                                         <th class="th" id="right">Jugador</th>
                                     </tr>
                                     <tr>
-                                        <td>Antoine Griezmann</td>
-                                        <td id="left">13' (P)</td>
+                                        <td>John Stones</td>
+                                        <td id="left">8' 40'</td>
                                         <td></td>
-                                        <td id="right">41'</td>
-                                        <td id="right">Ángel Di María</a></td>
+                                        <td id="right">78'</td>
+                                        <td id="right">Felipe Baloy</a></td>
                                     </tr>
                                     <tr>
-                                        <td id="si">Benjamin Pavard</td>
-                                        <td id="si">57'</td>
+                                        <td id="left">Harry Kane</td>
+                                        <td id="left">22'(P), 45+1'(P), 62'</td>
                                         <td></td>
-                                        <td id="right">48'</td>
-                                        <td id="right">Gabriel Mercado</a></td>
+                                        <td id="right"></td>
+                                        <td id="right"></a></td>
                                     </tr>
                                     <tr>
-                                        <td>Kylian Mbappé</td>
-                                        <td id="left">64' , 68' </td>
+                                        <td id="si">Jesse Lingard</td>
+                                        <td id="si">36'</td>
                                         <td></td>
-                                        <td id="right">90+3'</td>
-                                        <td id="right">Sergio Agüero</a></td>
+                                        <td id="right"></td>
+                                        <td id="right"></a></td>
                                     </tr>
                                 </tbody>
                             </table>
                             <div class="datos animated zoomIn">
                                 <dl>
-                                    
+                                    <p>Lingard gana en mitad de campo el duelo individual a Gabriel Gómez, se apoya en un Sterling que le tira 
+                                        una pared y el futbolista del Manchester United se saca un derechazo por toda la escuadra desde 
+                                        fuera del área.</p>
                                     <ul id="si">Más Información</ul>
                                     <li type="circle">
-                                        Argentina es el primer equipo que marca menos de tres goles en un encuentro de la Copa del Mundo
-                                        para terminar perdiéndolo desde la URSS ante Bélgica de 1986 (3 - 4).
+                                        Inglaterra ha ganado por tercera vez sus dos primeros partidos en la fase de 
+                                        grupos de la Copa del Mundo, también lo logró en 1982 y 2006.
                                     </li>
                                     <br>
                                     <li type="circle">
-                                        Francia está invicta en sus nueve partidos de un Mundial ante naciones sudamericanas 
-                                        (5 victorias, 4 empates), desde su derrota 1 - 2 contra Argentina en la edición de 1978.
+                                        Esta ha sido la mayor victoria de Inglaterra en la historia de un torneo importante (Mundial y Eurocopa).
                                     </li>
                                     <br>
                                     <li type="circle">
-                                        Esta es la quinta vez que Argentina concede +4 goles en un encuentro de la Copa del Mundo y la 
-                                        primera desde su derrota por 0 - 4 frente a Alemania en cuartos de final de 2010.
+                                        Esta es la quinta vez que un equipo ha marcado cinco goles antes del descanso en un partido de la 
+                                        Copa del Mundo, y el primero desde que Alemania lo hiciese frente a Brasil en las semifinales de 2014.
                                     </li>
                                 </dl>
                             </div>
